Bug 495499.  Speed up PutImageData for cases when the array contains doubles.  r=brendan,vlad,jorendorff